# smoldocling-ocr-streamlit

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: app.py  inference.py
