[tool.poetry]
name = "smoldocling-ocr-streamlit"
version = "0.1.0"
description = "A Streamlit OCR app with SmolDocling"
authors = ["Ananya Lahiri <ananyalahiri2003@yahoo.co.uk"]
license = "MIT"
readme = "README.md"
packages = [
    {"include" = "src", from = "."}
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
streamlit = "^1.21.0"
torch = "^2.0.1"
accelerate = "^0.21.0"
transformers = "^4.34.0"
docling-core = "^2.28.1"
huggingface-hub = "^0.16.4"
Pillow = "^10.0.0"
python-dotenv = "^1.0.0"
pyngrok = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
